--- a/.github/workflows/Setup COBOL.yml
+++ b/.github/workflows/Setup COBOL.yml
@@ -10,6 +10,6 @@ jobs:
       - uses: actions/checkout@main
       - uses: fabasoad/setup-cobol-action@main
       - name: Run script
-        run: 
+        run: 1
           cobc -x HelloWorld.cob
           ./HelloWorld
